added-the-correct-cloudinary-linktheader/footer/careerdetails/company

--- a/components/footer.html
+++ b/components/footer.html
@@ -15,7 +15,7 @@
         <div class="restriction">
             <div class="main-footer">
                 <div class="footer-1">
-                    <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png>
+                    <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png">
                     <div> <img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png"><span style="margin-right:0.5rem">ENGLISH</span><img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></div>
 
                     <div> <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
@@ -89,7 +89,7 @@
     </footer>
 
     <div class="media-footer">
-        <img class="media-hop" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png>
+        <img class="media-hop" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png">
         <ul>
             <li class="media-line">Company<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">21</span><img class="media-push1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
             <li class="media-line">People<img class="media-push2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
