--- a/components/header-b.html
+++ b/components/header-b.html
@@ -15,7 +15,7 @@
             <nav class="navbar">
                 <div class="header-b-back">
                     <div>
-                        <a href="./../pages/homepage.html"><img class="header-back-img" style="margin-right:1rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569424775/samples/new%20folder/ja5bxt95i1hqrswxrrlh.png"></a>
+                        <a href="./../pages/homepage.html"><img class="header-back-img" style="margin-right:1rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536409/samples/zainabs/l09cuyidzmo5vgqkrqtf.png"></a>
                     </div>
                     <div>
                         <p style="color: white;">Back</p>
@@ -34,10 +34,10 @@
         </div>
 
         <div class="media-header">
-            <img class="media-header1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/zzf0xbkcjr4a4gjjfgyt.png>
-            <img class="media-header2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569423612/samples/new%20folder/khcighwt6rzex3ttaqrv.svg">
+            <img class="media-header1" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536578/samples/zainabs/dq3toaxpwzungutsluvl.png">
+            <img class="media-header2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536578/samples/zainabs/hfdjqnl0vurccvfs8aaz.png">
 
-            <img class="media-header3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/ta274azqkawrcgi9i5qn.png">
+            <img class="media-header3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536579/samples/zainabs/ajnauplzmcr4qujdw6ls.png">
 
         </div>
     </header>
