add missing links

--- a/components/footer.html
+++ b/components/footer.html
@@ -98,4 +98,5 @@
     <a style="color:grey;text-decoration:none;" class="media-terms" href="#">Terms of Service</a>
 
     <p class="media-copy">&copy 2018 Hopper Inc.</p>
+    <link rel="stylesheet" href="../css/main.css">
 </div>
