--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,7 +22,8 @@
 @import 'pages/_contact'; 
 @import 'pages/_home'; 
 @import 'pages/_homepage'; 
-@import 'pages/_people'; 
+@import 'pages/_people';
+@import 'pages/careerlist-2';
 
 @import 'pages/_company-section-2';
 @import 'pages/people-2.scss';
