--- a/scss/pages/_company.scss
+++ b/scss/pages/_company.scss
@@ -22,6 +22,11 @@
     margin-top: 10rem;
     margin-left: 15rem;
 }
+.company__image {
+  position: relative;
+  top: 10%;
+
+}
 
 .company-graph {
     margin-top: 8rem;
@@ -153,7 +158,7 @@
         margin-right: -3px;
         background: $white;
         border-radius: 8px 0px 0px 8px;
-        margin-bottom: 0%;
+        margin-bottom: 80%;
         
   
       }
@@ -171,8 +176,8 @@
   }
   
   .company__image {
-    position: relative;
-    top: 10%;;
+    position: absolute;
+    top: 62%;;
   }
   .company__image2 {
     @include hidden();
@@ -210,10 +215,12 @@
         &__button1 {
           margin-right: 0.5%;
           width: 200px;
+          margin-bottom: 0%;
           
         }
         &__button2 {
           width: 50px;
+          height: 35px;
          
         }
       }
@@ -224,6 +231,9 @@
       .company__image2 {
         display: flex;
       }
+    }
+    .company__image {
+      @include hidden();
     }
     .companyBody {
       @include hidden();
