--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,9 @@ ul {
   @media (max-width: 580px) {
     .careerdetails {
       display: none; } }
+  @media (max-width: 768px) {
+    .careerdetails {
+      display: none; } }
 
 .careerdetails-item1 {
   width: 50vw;
@@ -272,6 +275,9 @@ ul {
 
 .career-details-mobile {
   display: none; }
+  .career-details-mobile .xxxxx {
+    margin-left: 40rem;
+    margin-top: 2rem; }
   .career-details-mobile .careerdet-p1 {
     padding: 2rem; }
     .career-details-mobile .careerdet-p1 p {
@@ -285,6 +291,13 @@ ul {
       position: absolute;
       bottom: 1rem;
       left: 5rem; }
+      .career-details-mobile .mobile-image-text .bottom-left i {
+        padding: 1.5rem;
+        border: thin solid white;
+        color: white;
+        margin-left: 17rem;
+        margin-bottom: 3rem;
+        border-radius: 2rem; }
   .career-details-mobile .careerdet-mobile-image {
     margin-top: 5rem;
     margin-bottom: 2rem; }
@@ -299,7 +312,9 @@ ul {
     color: white;
     height: 2.5rem;
     width: 25rem;
-    margin-top: 2rem; }
+    margin-top: 2rem;
+    margin-left: 10rem;
+    margin-bottom: 5rem; }
   .career-details-mobile .careerdet-mobile1 {
     text-align: center;
     margin-top: -2rem; }
@@ -314,9 +329,31 @@ ul {
       height: 2.5rem;
       width: 25rem;
       margin-top: 2rem; }
-  @media (max-width: 580px) {
-    .career-details-mobile {
-      display: block; } }
+
+@media (max-width: 768px) {
+  .career-details-mobile {
+    display: block; } }
+
+@media (max-width: 580px) {
+  .career-details-mobile {
+    display: block; }
+    .career-details-mobile .mobile-image-text .career-details-mobile-imgtext {
+      width: 20rem;
+      margin-left: 2rem; }
+    .career-details-mobile .mobile-image-text .bottom-left {
+      left: -6rem; }
+    .career-details-mobile .careerdet-p1 {
+      margin-top: 2rem; }
+    .career-details-mobile .xxxxx {
+      margin-left: 20rem;
+      margin-top: 2rem; }
+    .career-details-mobile .career-det-mebiabtn {
+      width: 15rem;
+      margin-left: 3rem; }
+    .career-details-mobile .careerdet-mobile1 {
+      margin-left: 5rem; }
+      .career-details-mobile .careerdet-mobile1 .applique {
+        width: 15rem; } }
 
 .companysection2 {
   display: grid;
@@ -346,7 +383,7 @@ ul {
   margin-top: 5rem;
   margin-left: 5rem; }
   .companysection-footer .carrot {
-    margin-right: 15rem;
+    margin-right: 9rem;
     margin-top: -4rem; }
 
 .company-footer-img {
