--- a/scss/pages/_careerdetails.scss
+++ b/scss/pages/_careerdetails.scss
@@ -2,14 +2,22 @@
     display: flex;
    overflow:hidden;
     
+   @media (max-width:580px) {
+    display: none;
+   
+    
+}
+
+@media (max-width:768px) {
+  display: none;
+ 
+  
+}
+  
+    
+}
           
-      @media (max-width:580px) {
-          display: none;
-         
-          
-      }
-          
-    }
+
     .careerdetails-item1 {
         width: 50vw;
         background: $skyBlue;
@@ -99,22 +107,21 @@ z-index:1;
     }
 
     .image-text{
-       
-
-        position: relative;
-        text-align: center;
-        color: white;
-     
-        .bottom-left {
-            position: absolute;
-            bottom: 1rem;
-            left: 5rem;
-          }}
+        position:relative;
+        text-align:center;
+        color:white;
+        .bottom-left{
+            position:absolute;
+            bottom:1rem;left:5rem;
+        }
+    }
 
           .career-details-mobile{
               display: none;
 
-              
+            .xxxxx{
+                margin-left: 40rem;margin-top: 2rem;
+            }  
             
               .careerdet-p1{
                   padding: 2rem ;
@@ -136,6 +143,10 @@ z-index:1;
                     position: absolute;
                     bottom: 1rem;
                     left: 5rem;
+
+                    i{
+                        padding:1.5rem;border:thin solid white;color:white;margin-left:17rem;margin-bottom:3rem;border-radius:2rem;
+                    }
                   }}
             .careerdet-mobile-image{
                 margin-top:5rem;
@@ -155,11 +166,14 @@ padding:2rem;
         height: 2.5rem;
         width: 25rem;
         margin-top:2rem;
+        margin-left: 10rem;
+        margin-bottom:5rem;
             }
 .careerdet-mobile1{
     text-align:center;
 margin-top:-2rem;
-   
+
+
 h1{
     margin-top: 5rem;
     margin-bottom: 1rem;
@@ -177,7 +191,59 @@ h1{
 }
 
 
-              @media (max-width:580px) {
-                  display: block;
-              }
+              
+
           }
+              
+
+              @media (max-width:768px) {
+                  .career-details-mobile{
+                display:block;}
+
+
+}
+              
+
+              
+@media (max-width:580px) {
+    .career-details-mobile{
+  display:block;
+
+  
+  .mobile-image-text{
+      .career-details-mobile-imgtext{
+          width:20rem;
+          margin-left:2rem;
+      }
+      .bottom-left{
+        
+        left: -6rem;
+    
+        
+      }
+  }
+
+  .careerdet-p1{
+      
+      margin-top:2rem;
+  }
+  .xxxxx{
+      margin-left:20rem;
+      margin-top:2rem;
+  }
+
+.career-det-mebiabtn{
+    width:15rem;
+    margin-left:3rem;
+}
+.careerdet-mobile1{
+
+    margin-left: 5rem;
+    .applique{
+width:15rem;
+    }
+}
+    }
+}
+
+    
