--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -1,8 +1,6 @@
-
 .peoples-media{
-    display:none;
+    display: none;
 }
-
 
 
 .grid{
@@ -60,29 +58,57 @@ margin-left:-0.5rem;
     }
     .peoples-media{
         display:block;
+
+       
     }
 }
+
+@media(max-width:768px){
+    .grid{
+        display:none;
+    }
+    .item7{
+        display:none;
+    }
+    .footer-writeup{
+        display:none;
+    }
+    .peoples-media{
+        display:block;
+    
+    }   
+}
+
+.peoples-media{
+
+
+    .peoples-media-writeup{
+        margin-top:2rem;margin-left:15rem;margin-bottom:2.5rem
+    }
 
 
 .peoples-media-grid{
     display:grid;
     grid-template-columns: repeat(3,1fr);
+   
     margin-top:2rem;
     overflow:hidden;
-    .item-1-media{margin-left:4rem;
+    .item-1-media{margin-left:12.5rem;
         margin-top:5rem;
     }
     .item-2-media{
         margin-top:5rem;
     }
-    .item-3-media{margin-left:-2.5rem;
+    .item-3-media{margin-left:-3rem;
+        margin-top:0.5rem;
     }
-    .item-4-media{margin-left:7rem;
+    .item-4-media{margin-left:15.7rem;
     }
     .item-5-media{margin-top:-3rem;
     }
     .item-6-media{margin-top:-3rem;
-        margin-right:8rem;
+        margin-right:15rem;
+        
     }
 
 
@@ -91,6 +117,7 @@ margin-left:-0.5rem;
 }
 
 .item-7-media{
-    margin-left:18.8rem;
+    margin-left:27.2rem;
     margin-top:-5rem;
+}
 }
