--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: proxima-nova, sans-serif;
+    font-family: 'proxima_nova_altbold', sans-serif;
     font-style: normal;
     font-weight: 100;
     line-height: 1.6;
