--- a/scss/pages/_careerdetails.scss
+++ b/scss/pages/_careerdetails.scss
@@ -1,249 +1,214 @@
 .careerdetails {
     display: flex;
-   overflow:hidden;
-    
-   @media (max-width:580px) {
-    display: none;
-   
-    
-}
-
-@media (max-width:768px) {
-  display: none;
- 
-  
-}
-  
-    
-}
-          
-
-    .careerdetails-item1 {
-        width: 50vw;
-        background: $skyBlue;
-        color: $white;
-        padding-top: 4rem;
-        padding-left: 5rem;
-        padding-right: 5rem;
-z-index:1;
-
-        
-        
-            }
-        .careerdetails-logo {
-            color: $white;
-        }
-        .careerdet-h1 {
-           display:flex;
-          width: 40rem;
-           
-         .careerdet-h1-p{
-             margin-top:5rem;
-         }
-
-         .careerdet-h1-image{
-             position:relative;
-             z-index:1;
-             right:-9rem;
-            
-         }
-         }
-        .career-border {
-            border-bottom: thin solid white;
-            padding-bottom: 2rem;
-        }
-        .careerdet-p1 {
-          padding-top:1.5rem;
-            padding-bottom: 2rem;
-        }
-    
-    .careerdetails-item2 {
-        width: 50vw;
-        padding-top: 3rem;
-        padding-left: 5rem;
-        padding-right: 5rem;
-        background: white;
-        z-index: 2;
-         
-
-        a > i {
-           color: $skyBlue;
-            background: $white;
-            border: thin solid $skyBlue;
-            border-radius: 3rem;
-            padding: 0.5rem;
-            margin-right: 1rem;
-            margin-top: 1.5rem;
-        }
-        p {
-            margin-bottom: 2rem;
-        }
-        h3 {
-            margin-top: 1rem;
-          
-        }
-        .careerdet-bottom {
-            
-            border-bottom: thin solid grey;
-            padding-bottom: 1rem;
-        }
+    overflow: hidden;
+    @media (max-width: 580px) {
+        display: none;
     }
-    .career-det-flex {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap:0.1rem;
-        margin-top:1rem;
-
-        .career-button {
-            background-color: skyblue;
-            border: none;
-            border-radius: 0.5rem;
-            color: white;
-            height: 2.5rem;
-            width: 25rem;
-            margin-left: 5rem;
-            margin-bottom: 10rem;
-        }
+    @media (max-width:768px) {
+        display: none;
     }
-
-    .image-text{
-        position:relative;
-        text-align:center;
-        color:white;
-        .bottom-left{
-            position:absolute;
-            bottom:1rem;left:5rem;
-        }
-    }
-
-          .career-details-mobile{
-              display: none;
-
-            .xxxxx{
-                margin-left: 40rem;margin-top: 2rem;
-            }  
-            
-              .careerdet-p1{
-                  padding: 2rem ;
-
-                  p{
-                      padding: 2rem;
-                  }
-              }
-
-              .mobile-image-text{
-       
-
-                position: relative;
-                text-align: center;
-                color: white;
-                margin-top:4rem;
-             
-                .bottom-left {
-                    position: absolute;
-                    bottom: 1rem;
-                    left: 5rem;
-
-                    i{
-                        padding:1.5rem;border:thin solid white;color:white;margin-left:17rem;margin-bottom:3rem;border-radius:2rem;
-                    }
-                  }}
-            .careerdet-mobile-image{
-                margin-top:5rem;
-                margin-bottom:2rem;
-            }
-            .career-det-mobile-h3{
-                margin-top:2rem;
-margin-bottom:2rem;
-padding:2rem;
-            }
-
-            .career-det-mebiabtn{
-                background-color: skyblue;
-        border: none;
-        border-radius: 0.5rem;
-        color: white;
-        height: 2.5rem;
-        width: 25rem;
-        margin-top:2rem;
-        margin-left: 10rem;
-        margin-bottom:5rem;
-            }
-.careerdet-mobile1{
-    text-align:center;
-margin-top:-2rem;
-
-
-h1{
-    margin-top: 5rem;
-    margin-bottom: 1rem;
 }
-    .applique {
+
+.careerdetails-item1 {
+    width: 50vw;
+    background: $skyBlue;
+    color: $white;
+    padding-top: 4rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    z-index: 1;
+}
+
+.careerdetails-logo {
+    color: $white;
+}
+
+.careerdet-h1 {
+    display: flex;
+    width: 40rem;
+    .careerdet-h1-p {
+        margin-top: 5rem;
+    }
+    .careerdet-h1-image {
+        position: relative;
+        z-index: 1;
+        right: -9rem;
+    }
+}
+
+.career-border {
+    border-bottom: thin solid white;
+    padding-bottom: 2rem;
+}
+
+.careerdet-p1 {
+    padding-top: 1.5rem;
+    padding-bottom: 2rem;
+}
+
+.careerdetails-item2 {
+    width: 50vw;
+    padding-top: 3rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    background: white;
+    z-index: 2;
+    a > i {
+        color: $skyBlue;
+        background: $white;
+        border: thin solid $skyBlue;
+        border-radius: 3rem;
+        padding: 0.5rem;
+        margin-right: 1rem;
+        margin-top: 1.5rem;
+    }
+    p {
+        margin-bottom: 2rem;
+    }
+    h3 {
+        margin-top: 1rem;
+    }
+    .careerdet-bottom {
+        border-bottom: thin solid grey;
+        padding-bottom: 1rem;
+    }
+}
+
+.career-det-flex {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0.1rem;
+    margin-top: 1rem;
+    .career-button {
         background-color: skyblue;
         border: none;
         border-radius: 0.5rem;
         color: white;
         height: 2.5rem;
         width: 25rem;
-        margin-top:2rem;
+        margin-left: 5rem;
+        margin-bottom: 10rem;
     }
-    
 }
 
-
-              
-
-          }
-              
-
-              @media (max-width:768px) {
-                  .career-details-mobile{
-                display:block;}
-
-
+.image-text {
+    position: relative;
+    text-align: center;
+    color: white;
+    .bottom-left {
+        position: absolute;
+        bottom: 1rem;
+        left: 5rem;
+    }
 }
-              
 
-              
+.career-details-mobile {
+    display: none;
+    .xxxxx {
+        margin-left: 40rem;
+        margin-top: 2rem;
+    }
+    .careerdet-p1 {
+        padding: 2rem;
+        p {
+            padding: 2rem;
+        }
+    }
+    .mobile-image-text {
+        position: relative;
+        text-align: center;
+        color: white;
+        margin-top: 4rem;
+        .bottom-left {
+            position: absolute;
+            bottom: 1rem;
+            left: 5rem;
+            i {
+                padding: 1.5rem;
+                border: thin solid white;
+                color: white;
+                margin-left: 17rem;
+                margin-bottom: 3rem;
+                border-radius: 2rem;
+            }
+        }
+    }
+    .careerdet-mobile-image {
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+    }
+    .career-det-mobile-h3 {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        padding: 2rem;
+    }
+    .career-det-mebiabtn {
+        background-color: skyblue;
+        border: none;
+        border-radius: 0.5rem;
+        color: white;
+        height: 2.5rem;
+        width: 25rem;
+        margin-top: 2rem;
+        margin-left: 10rem;
+        margin-bottom: 5rem;
+    }
+    .careerdet-mobile1 {
+        text-align: center;
+        margin-top: -2rem;
+        h1 {
+            margin-top: 5rem;
+            margin-bottom: 1rem;
+        }
+        .applique {
+            background-color: skyblue;
+            border: none;
+            border-radius: 0.5rem;
+            color: white;
+            height: 2.5rem;
+            width: 25rem;
+            margin-top: 2rem;
+        }
+    }
+}
+
+@media (max-width:768px) {
+    .career-details-mobile {
+        display: block;
+    }
+    .media-footer{
+        display:block;
+    }
+}
+
 @media (max-width:580px) {
-    .career-details-mobile{
-  display:block;
-
-  
-  .mobile-image-text{
-      .career-details-mobile-imgtext{
-          width:20rem;
-          margin-left:2rem;
-      }
-      .bottom-left{
-        
-        left: -6rem;
-    
-        
-      }
-  }
-
-  .careerdet-p1{
-      
-      margin-top:2rem;
-  }
-  .xxxxx{
-      margin-left:20rem;
-      margin-top:2rem;
-  }
-
-.career-det-mebiabtn{
-    width:15rem;
-    margin-left:3rem;
-}
-.careerdet-mobile1{
-
-    margin-left: 5rem;
-    .applique{
-width:15rem;
+    .career-details-mobile {
+        display: block;
+        .mobile-image-text {
+            .career-details-mobile-imgtext {
+                width: 20rem;
+                margin-left: 2rem;
+            }
+            .bottom-left {
+                left: -6rem;
+            }
+        }
+        .careerdet-p1 {
+            margin-top: 2rem;
+        }
+        .xxxxx {
+            margin-left: 25rem;
+            margin-top: 2rem;
+        }
+        .career-det-mebiabtn {
+            width: 15rem;
+            margin-left: 3rem;
+        }
+        .careerdet-mobile1 {
+            margin-left: 7rem;
+            .applique {
+                width: 15rem;
+            }
+        }
     }
 }
-    }
-}
-
-    
