--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,9 @@ ul {
     .career-details-mobile {
       display: block; } }
 
+.company-subnav-1 {
+  display: block; }
+
 .companysection2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -377,11 +380,13 @@ ul {
   margin-left: 5rem;
   margin-top: 5rem; }
 
-@media (max-width: 580px) {
+@media (max-width: 768px) {
+  .company-subnav-1 {
+    display: none; }
   .companysection2 {
     display: flex;
     flex-direction: column;
-    margin-left: 2rem;
+    margin-left: 7rem;
     margin-top: 5rem; }
     .companysection2 .hide-link {
       display: block;
@@ -392,9 +397,10 @@ ul {
       height: 15rem;
       margin-top: 5rem; }
   .companysection2-num {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    margin-left: 1rem; }
+    margin-left: 2rem; }
     .companysection2-num .company-item {
       margin-bottom: 2rem; }
   .company-graph {
@@ -404,9 +410,10 @@ ul {
   .companysection-footer {
     display: none; }
   .company-media {
+    overflow-x: hidden;
     display: block;
     margin-top: 5rem;
-    margin-left: 1rem; }
+    margin-left: 2rem; }
     .company-media h1 {
       margin-bottom: 2rem; }
     .company-media p {
