--- a/scss/pages/_company.scss
+++ b/scss/pages/_company.scss
@@ -1,14 +1,12 @@
-.company-subnav-1{
-    display:block;
+.company-subnav-1 {
+    display: block;
 }
-
 
 .companysection2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin-top: 10rem;
     margin-left: 10rem;
-    
     .hide-link {
         display: none;
     }
@@ -51,88 +49,71 @@
     display: none
 }
 
-.company-subnav-1{
-    margin-top:5rem;
+.company-subnav-1 {
+    margin-top: 5rem;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-.company-subnavimg{
-    margin-left:10rem;
-}
-    .company-subnav-ul{
-        display:flex;
-        li{
-            margin-left:1rem;
+    grid-template-columns: repeat(2, 1fr);
+    .company-subnavimg {
+        margin-left: 10rem;
+    }
+    .company-subnav-ul {
+        display: flex;
+        li {
+            margin-left: 1rem;
         }
     }
 }
 
-.company-subnav-2{
-    display:grid;
-    grid-template-columns: repeat(2,1fr);
-    margin-top:5rem;
-    margin-left:10rem;
+.company-subnav-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 5rem;
+    margin-left: 10rem;
 }
 
-.companysubnav2-num{
-    
-    margin-left:5rem;
-    margin-top:5rem;
+.companysubnav2-num {
+    margin-left: 5rem;
+    margin-top: 5rem;
 }
 
+.company-media {
+    display: none;
+    margin-top: 5rem;
+    margin-left: 2rem;
+    h1 {
+        margin-bottom: 2rem;
+    }
+    p {
+        margin-bottom: 2rem;
+    }
+    .company-media-img {
+        margin-left: 1rem;
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        .company-media-img-22 {
+            margin-left: 7rem;
+        }
+        .company-media-img-33 {
+            margin-left: 7rem;
+        }
+    }
+    .company-media-img2 {
+        margin-left: 1rem;
+        margin-bottom: 2rem;
+        .company-media-img2-55 {
+            margin-left: 5rem;
+        }
+        .company-media-img2-66 {
+            margin-left: 7rem;
+        }
+    }
+}
 
-
-
-
-    
-
-    
-    
-    .company-media {
-       
+@media(max-width:768px) {
+    .company-subnav-1 {
         display: none;
-        margin-top: 5rem;
-        margin-left: 2rem;
-        h1 {
-            margin-bottom: 2rem;
-        }
-        p {
-            margin-bottom: 2rem;
-        }
-
-       
-        .company-media-img {
-            margin-left:1rem;
-            margin-top: 2rem;
-            margin-bottom: 1rem;
-
-            .company-media-img-22{
-                margin-left:7rem;
-            }
-            .company-media-img-33{
-                margin-left:7rem;
-        
-        }}
-
-        .company-media-img2 {
-            margin-left:1rem;
-            margin-bottom: 2rem;
-
-            .company-media-img2-55{
-                margin-left:5rem;
-            }
-            .company-media-img2-66{
-                margin-left:7rem;
-            }
-        }
     }
-
-
-    @media(max-width:768px) {
-
-        .company-subnav-1{
-            display: none;
-        }
-        .company-graph {
+    .company-graph {
         display: none;
     }
     .company-footer-img {
@@ -141,11 +122,7 @@
     .companysection-footer {
         display: none;
     }
-
-
-
     .companysection2 {
-       
         display: flex;
         flex-direction: column;
         margin-left: 7rem;
@@ -161,10 +138,7 @@
             margin-top: 5rem;
         }
     }
-
-
     .companysection2-num {
-        
         display: flex;
         flex-direction: column;
         margin-left: 2rem;
@@ -173,53 +147,39 @@
         }
     }
     .company-media {
-       
-        display: block;}
+        display: block;
     }
+}
 
-    @media(max-width:580px){
-
-        .companysection2 {
-       
-           
-            margin-left: 1rem;
-            
-        
-    
+@media(max-width:580px) {
+    .companysection2 {
+        margin-left: 1rem;
         .bear-footer {
             width: 15rem;
             height: 10rem;
-            
         }
     }
-
-    .company-media{
-    .company-media-img {
-            margin-left:0.1rem;
+    .company-media {
+        .company-media-img {
+            margin-left: 0.1rem;
             margin-top: 0.2rem;
             margin-bottom: 0.2rem;
-
-            .company-media-img-22{
-                margin-left:0.1rem;
+            .company-media-img-22 {
+                margin-left: 0.1rem;
             }
-            .company-media-img-33{
-                margin-left:0.5rem;
-        
-        }}
-
+            .company-media-img-33 {
+                margin-left: 0.5rem;
+            }
+        }
         .company-media-img2 {
-            margin-left:0.1rem;
+            margin-left: 0.1rem;
             margin-bottom: 0.2rem;
-
-            .company-media-img2-55{
-                margin-left:0.2rem;
+            .company-media-img2-55 {
+                margin-left: 0.2rem;
             }
-            .company-media-img2-66{
-                margin-left:0.2rem;
+            .company-media-img2-66 {
+                margin-left: 0.2rem;
             }
         }
     }
-
-
-    }
-    
+}
