--- a/css/main.css
+++ b/css/main.css
@@ -512,23 +512,23 @@ ul {
   margin-left: 5rem; }
   .grid .item1 {
     margin-top: 24rem;
-    margin-left: 3rem; }
+    margin-left: 6.5rem; }
   .grid .item2 {
     margin-top: 19rem;
     margin-left: -0.7rem; }
   .grid .item3 {
-    margin-left: -15rem; }
+    margin-left: -17rem; }
   .grid .item4 {
-    margin-left: 8rem; }
+    margin-left: 11.5rem; }
   .grid .item5 {
     margin-top: -11rem;
     margin-left: -0.5rem; }
   .grid .item6 {
     margin-top: -11rem;
-    margin-left: 0.5rem; }
+    margin-left: -1.5rem; }
 
 .item7 {
-  margin-left: 59rem;
+  margin-left: 62.5rem;
   margin-top: -20rem; }
 
 @media (max-width: 580px) {
@@ -541,28 +541,37 @@ ul {
   .peoples-media {
     display: block; } }
 
-.peoples-media-grid {
+.peoples-media .peoples-media-first-paragraph {
+  margin-top: 2rem;
+  margin-left: 15rem;
+  margin-bottom: 2.5rem; }
+
+.peoples-media .peoples-media-first-paragraph-image {
+  margin-left: 20rem; }
+
+.peoples-media .peoples-media-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 2rem;
   overflow: hidden; }
-  .peoples-media-grid .item-1-media {
-    margin-left: 4rem;
+  .peoples-media .peoples-media-grid .item-1-media {
+    margin-left: 13rem;
     margin-top: 5rem; }
-  .peoples-media-grid .item-2-media {
+  .peoples-media .peoples-media-grid .item-2-media {
     margin-top: 5rem; }
-  .peoples-media-grid .item-3-media {
-    margin-left: -2.5rem; }
-  .peoples-media-grid .item-4-media {
-    margin-left: 7rem; }
-  .peoples-media-grid .item-5-media {
+  .peoples-media .peoples-media-grid .item-3-media {
+    margin-left: -3rem;
+    margin-top: 0.5rem; }
+  .peoples-media .peoples-media-grid .item-4-media {
+    margin-left: 16.3rem; }
+  .peoples-media .peoples-media-grid .item-5-media {
     margin-top: -3rem; }
-  .peoples-media-grid .item-6-media {
+  .peoples-media .peoples-media-grid .item-6-media {
     margin-top: -3rem;
-    margin-right: 8rem; }
+    margin-right: 20rem; }
 
-.item-7-media {
-  margin-left: 18.8rem;
+.peoples-media .item-7-media {
+  margin-left: 27.7rem;
   margin-top: -5rem; }
 
 * {
