--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -1,96 +1,94 @@
-
-.peoples-media{
-    display:none;
+.peoples-media {
+    display: none;
 }
 
-
-
-.grid{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     margin-top: -15rem;
     margin-left: 5rem;
-    
-.item1{
-    margin-top:24rem;
-   margin-left:3rem;
+    .item1 {
+        margin-top: 24rem;
+        margin-left: 6.5rem;
+    }
+    .item2 {
+        margin-top: 19rem;
+        margin-left: -0.7rem;
+    }
+    .item3 {
+        margin-left: -17rem;
+    }
+    .item4 {
+        margin-left: 11.5rem;
+    }
+    .item5 {
+        margin-top: -11rem;
+        margin-left: -0.5rem;
+    }
+    .item6 {
+        margin-top: -11rem;
+        margin-left: -1.5rem;
+    }
 }
 
-.item2{
-    margin-top:19rem;
-    margin-left:-0.7rem;
-}
-
-.item3{
-    margin-left: -15rem;  
-}
-.item4{
-  margin-left: 8rem;  
-}
-
-.item5{
-margin-top: -11rem;
-margin-left:-0.5rem;
-}
-
-.item6{
-    margin-top: -11rem;
-    margin-left:0.5rem;
-    
-}
-
-
-
-}
-
-.item7{
-    margin-left:59rem;
+.item7 {
+    margin-left: 62.5rem;
     margin-top: -20rem;
 }
 
-@media(max-width:580px){
-    .grid{
-        display:none;
+@media(max-width:580px) {
+    .grid {
+        display: none;
     }
-    .item7{
-        display:none;
+    .item7 {
+        display: none;
     }
-    .footer-writeup{
-        display:none;
+    .footer-writeup {
+        display: none;
     }
-    .peoples-media{
-        display:block;
+    .peoples-media {
+        display: block;
     }
 }
 
-
-.peoples-media-grid{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    margin-top:2rem;
-    overflow:hidden;
-    .item-1-media{margin-left:4rem;
-        margin-top:5rem;
+.peoples-media {
+    .peoples-media-first-paragraph {
+        margin-top: 2rem;
+        margin-left: 15rem;
+        margin-bottom: 2.5rem;
     }
-    .item-2-media{
-        margin-top:5rem;
+    .peoples-media-first-paragraph-image {
+        margin-left: 20rem;
     }
-    .item-3-media{margin-left:-2.5rem;
+    .peoples-media-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin-top: 2rem;
+        overflow: hidden;
+        .item-1-media {
+            margin-left: 13rem;
+            margin-top: 5rem;
+        }
+        .item-2-media {
+            margin-top: 5rem;
+        }
+        .item-3-media {
+            margin-left: -3rem;
+            margin-top: 0.5rem;
+        }
+        .item-4-media {
+            margin-left: 16.3rem;
+        }
+        .item-5-media {
+            margin-top: -3rem;
+        }
+        .item-6-media {
+            margin-top: -3rem;
+            margin-right: 20rem;
+        }
     }
-    .item-4-media{margin-left:7rem;
+    .item-7-media {
+        margin-left: 27.7rem;
+        margin-top: -5rem;
     }
-    .item-5-media{margin-top:-3rem;
-    }
-    .item-6-media{margin-top:-3rem;
-        margin-right:8rem;
-    }
-
-
-
-
-}
-
-.item-7-media{
-    margin-left:18.8rem;
-    margin-top:-5rem;
 }
