Added a new page (company-video-modal.html) as illustrated by Chidi, and linked it to an achor tag element on the company.html page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@
 @import 'pages/_homepage'; 
 @import 'pages/_people';
 @import 'pages/careerlist-2';
-
+@import 'pages/company-video-modal';
 @import 'pages/_company-section-2';
 @import 'pages/people-2.scss';
 @import 'pages/_job';
