--- a/css/main.css
+++ b/css/main.css
@@ -654,6 +654,14 @@ ul {
       font-size: 16px; }
 
 * {
+  margin: 0px;
+  padding: 0px; }
+
+#company-video-modal {
+  margin: 70px auto;
+  display: block; }
+
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box; }
